--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id=header>
     <div class="container">
         <nav>
-          <img src="images/Portfolio.png" class="logo" >
+          <img src="Portfolio.png" class="logo" >
           <ul>
             <li><a href="#">Home</a>
              <li><a href="#">Projects</a></li>
