--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
             link.click(); // Programmatically trigger the click
         });
     </script>
+    <div>
+    <a href="Home.html">Home</a>
+      
+    </div> 
 </body>
 </html>
 
