--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
           <img src="Portfolio.png" class="logo" >
           <ul>
-            <li><a href="#">Home</a>
+            <li><a href="Home.html">Home</a>
              <li><a href="#">Projects</a></li>
               <li><a href="#">Education</a></li>
               <li><a href="#">About</a></li>
@@ -48,10 +48,7 @@
             link.click(); // Programmatically trigger the click
         });
     </script>
-    <div>
-    <a href="Home.html">Home</a>
-      
-    </div> 
+  
 </body>
 </html>
 
