--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
               <li><a href="#">Contact</a></li>
           </ul>
         </nav>
+        <div id="projects">
+            <h1>Welcome to my projects</h1>
+        </div>
         <div class="header-text">
            
             <h1>Hi, I'm <span>Sameera</span> <br>From India</h1>
