--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <img src="Portfolio.png" class="logo" >
           <ul>
             <li><a href="Home.html">Home</a>
-             <li><a href="#">Projects</a></li>
+             <li><a href="#Home">Projects</a></li>
               <li><a href="#">Education</a></li>
               <li><a href="#">About</a></li>
               <li><a href="#">Contact</a></li>
